syntax = "proto3";
 
package authentication;

service AuthenticationService{
    rpc Signup(SignupRequest) returns (OptionalResponse);
    rpc Verify(VerificationRequest) returns (TokenInfo);
    rpc Signin(SigninRequest) returns (OptionalResponse);

    rpc GetUsers(Pagination) returns (Users);
    rpc ChangeUserStatus(ChangeUserStatusRequest) returns (Empty);
}

message Empty{}

enum UserStatus{
    ON_GOING = 0;
    SUSPENDED = 1;
    DELETED = 2;
    PERMANENT_BAN = 3;
}

message Pagination{
    int32 offset = 1;
    int32 limit = 2;
    bool get_total = 3;
}

enum VerificationMethod{
    VERIFY_PHONE_NUMBER = 0;
    VERIFY_SIGN_IN = 1;
}

message SignupRequest{
    string phone = 1;
    string agent = 2;
    string ip = 3;
}

message OptionalResponse{
    optional string code = 1;
    optional string msg = 2;

}

message TokenInfo{
    string access_token = 1;
    string refresh_token = 2;
    int32 expiry = 3;
}

message VerificationRequest{
    VerificationMethod verification_method = 1;
    string code = 2;
    string agent = 3;
    string ip = 4;
}

message SigninRequest{
    string phone = 1;
    string agent = 2;
    string ip = 3;
}

message User{
    int32 user_id = 1;
    string phone_number = 2;
    string status = 3;
    string created_at = 4;
}

message Users {
    repeated User user = 1;
    optional int64 total_count = 2;
}

message ChangeUserStatusRequest{
    UserStatus user_status = 1;
    int32 user_id = 2;
}